# eclssd

./: .gitignore  Cargo.toml  README.md  flake.nix  garnix.yaml  rust-toolchain.toml
.github/workflows/: CI.yml  flakehub-publish-rolling.yml
eclss-displayd/: Cargo.toml
eclss-displayd/src/: display.rs  main.rs
eclss-readoutd/: Cargo.toml
eclss-readoutd/src/: display.rs  main.rs  terminal.rs
eclss-readoutd/src/display/: ssd1680_display.rs
eclssctl/: Cargo.toml
eclssctl/src/: main.rs
eclssd/: Cargo.toml
eclssd/src/: main.rs  mdns.rs  storage.rs
lib/eclss/: Cargo.toml
lib/eclss-api/: Cargo.toml
lib/eclss-api/src/: lib.rs
lib/eclss-app/: Cargo.toml
lib/eclss-app/src/: lib.rs
lib/eclss-axum/: Cargo.toml
lib/eclss-axum/src/: lib.rs
lib/eclss/src/: error.rs  lib.rs  metrics.rs  retry.rs  sensor.rs  storage.rs  trace.rs
lib/eclss/src/sensor/: bme680.rs  ens160.rs  pmsa003i.rs  scd.rs  scd40.rs  sen55.rs  sgp30.rs  sht41.rs  status.rs
lib/eclss/src/sensor/scd/: scd30.rs  scd40.rs  scd41.rs
lib/pmsa003i/: Cargo.toml  README.md
lib/pmsa003i/src/: lib.rs
