[workspace]
members = [
    "eclssd",
    "lib/*",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7.5"
clap = "4.0"
eclss = { path = "lib/eclss" }
eclss-api = { path = "lib/eclss-api" }
eclss-axum = { path = "lib/eclss-axum" }
ens160 = { version = "0.6.1", default-features = false }
embedded-hal = { version = "1" }
embedded-hal-async = { version = "1" }
heapless = "0.8"
humantime = "2"
maitake-sync = "0.1.1"
tokio = "1.37"
tinymetrics = { git = "https://github.com/hawkw/tinymetrics", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
linux-embedded-hal = "0.4.0"
scd4x = { version = "0.3.0", default-features = false }
serde = { version = "1.0", default-features = false }
pmsa003i = { path = "lib/pmsa003i" }

[patch.crates-io]
linux-embedded-hal = { git = "https://github.com/rust-embedded/linux-embedded-hal/" }
scd4x = { git = "https://github.com/hawkw/scd4x-rs", branch = "eliza/async" }
sensirion-i2c = { git = "https://github.com/hawkw/sensirion-i2c-rs", rev = "6dde55bec555b2070414c241a4d0618fdf4e2346" }
