[workspace]
members = [
    "eclssd",
    "eclssctl",
    "lib/*",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7.5"
clap = "4.0"
eclss = { path = "lib/eclss" }
eclss-api = { path = "lib/eclss-api" }
eclss-app = { path = "lib/eclss-app" }
eclss-axum = { path = "lib/eclss-axum" }
ens160 = { version = "0.6.1", default-features = false }
embedded-hal = { version = "1" }
embedded-hal-async = { version = "1" }
futures = "0.3"
heapless = "0.8"
humantime = "2"
hostname = "0.4.0"
maitake-sync = "0.1.1"
mdns-sd =  "0.11.1"
tokio = "1.37"
tokio-stream = { version = "0.1.15" }
tinymetrics = { git = "https://github.com/hawkw/tinymetrics", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
tracing-journald = { version = "0.3" }
linux-embedded-hal = "0.4.0"
local-ip-address = "0.6.1"
pmsa003i = { path = "lib/pmsa003i" }
reqwest = { version = "0.12.4", default-features = false }
scd4x = { version = "0.3.0", default-features = false }
sgp30 = { version = "0.4.0", default-features = false }
serde = { version = "1.0", default-features = false }

[patch.crates-io]
linux-embedded-hal = { git = "https://github.com/rust-embedded/linux-embedded-hal/" }
scd4x = { git = "https://github.com/hawkw/scd4x-rs", branch = "eliza/async" }
sgp30 = { git = "https://github.com/hawkw/sgp30-rs", branch = "eliza/embedded-hal-async" }
sensirion-i2c = { git = "https://github.com/sensirion/sensirion-i2c-rs", rev = "f7b9f3a81b777bc6e6b2f0acb4c1ef9c57dfa06d" }
