[workspace]
members = [
    "eclssd",
    "eclss-readoutd",
    "eclssctl",
    "lib/*",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7.5"
bosch-bme680 = "1.0.2"
clap = "4.0"
eclss = { path = "lib/eclss" }
eclss-api = { path = "lib/eclss-api" }
eclss-app = { path = "lib/eclss-app" }
eclss-axum = { path = "lib/eclss-axum" }
ens160 = { version = "0.6.1", default-features = false }
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.6.0"
profont = "0.7"
embedded-hal = { version = "1" }
embedded-hal-async = { version = "1" }
fixed = "1.20.0"
futures = "0.3"
heapless = "0.8"
humantime = "2"
hostname = "0.4.0"
maitake-sync = "0.1.1"
mdns-sd = "0.11.1"
tokio = "1.37"
tokio-stream = { version = "0.1.15" }
tinymetrics = { git = "https://github.com/hawkw/tinymetrics", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
tracing-journald = { version = "0.3" }
libscd = { version = "0.3", default-features = false }
linux-embedded-hal = "0.4.0"
local-ip-address = "0.6.1"
pmsa003i = { path = "lib/pmsa003i" }
ratatui = "0.26.3"
reqwest = { version = "0.12.4", default-features = false }
sensor-sen5x = { version = "0.1.0", default-features = false }
sgp30 = { version = "0.4.0", default-features = false }
sht4x = { version = "0.2.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0" }
spin_sleep = { version = "1.2.0" }
strum = { version = "0.26", default-features = false }


[patch.crates-io]
bosch-bme680 = { git = "https://github.com/hawkw/bosch-bme680", branch = "eliza/async" }
linux-embedded-hal = { git = "https://github.com/rust-embedded/linux-embedded-hal/" }
sgp30 = { git = "https://github.com/hawkw/sgp30-rs", branch = "eliza/embedded-hal-async" }
sht4x = { git = "https://github.com/hawkw/sht4x", branch = "eliza/embedded-hal-async" }
sensor-sen5x = { git = "https://github.com/hawkw/sen5x-rs", branch = "main" }
sensirion-i2c = { git = "https://github.com/sensirion/sensirion-i2c-rs", rev = "f7b9f3a81b777bc6e6b2f0acb4c1ef9c57dfa06d" }
