[package]
name = "eclss-displayd"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"

[features]
default = ["window", "terminal"]
window = ["dep:embedded-graphics-simulator"]
terminal = []


[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
eclss-api = { workspace = true }
eclss-app = { workspace = true }
embedded-graphics = { workspace = true }
embedded-graphics-simulator = { workspace = true, optional = true, features = ["with-sdl"]}
profont = { workspace = true }
humantime = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["charset", "rustls-tls", "http2", "json"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = { workspace = true }
