[package]
name = "eclss-readoutd"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"

[features]
default = ["window", "terminal"]
window = [
    "dep:embedded-graphics",
    "dep:embedded-graphics-simulator",
    "dep:profont",
]
terminal = ["dep:ratatui", "dep:crossterm", "futures"]


[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true, optional = true, features = ["event-stream"] }
clap = { workspace = true, features = ["derive", "env"] }
eclss-api = { workspace = true }
eclss-app = { workspace = true }
embedded-graphics = { workspace = true, optional = true }
embedded-graphics-simulator = { workspace = true, optional = true, features = ["with-sdl"]}
futures = { workspace = true, optional = true }
humantime = { workspace = true }
profont = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }
reqwest = { workspace = true, default-features = false, features = ["charset", "rustls-tls", "http2", "json"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync", "io-util", "macros"] }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = { workspace = true }
