[package]
name = "eclssd"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"

[features]
default = ["bme680", "scd41", "sen55", "sgp30", "sht41", "pmsa003i", "ens160", "mdns"]
bme680 = ["eclss/bme680"]
scd30 = ["eclss/scd30"]
scd40 = ["eclss/scd40"]
scd41 = ["eclss/scd41"]
sgp30 = ["eclss/sgp30"]
sht41 = ["eclss/sht41"]
sen55 = ["eclss/sen55"]
pmsa003i = ["eclss/pmsa003i"]
ens160 = ["eclss/ens160"]
mdns = ["mdns-sd", "hostname", "local-ip-address"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
eclss = { workspace = true, features = ["clap", "tracing", "serde"] }
eclss-app = { workspace = true, features = ["journald"] }
eclss-axum = { workspace = true }
eclss-api = { workspace = true, features = ["clap", "std"] }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
humantime = { workspace = true }
hostname = { workspace = true, optional = true }
linux-embedded-hal = { workspace = true, features = ["i2c", "async-tokio"] }
local-ip-address = { workspace = true, optional = true }
mdns-sd = { workspace = true, optional = true }
serde = { workspace = true }
spin_sleep = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = { workspace = true }
