[package]
name = "eclss-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fmt = []

[dependencies]
heapless = { workspace = true, features = ["serde"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
