[package]
name = "eclss-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fmt = []
std = ["strum/std"]

[dependencies]
clap = { workspace = true, optional = true }
heapless = { workspace = true, features = ["serde"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
strum = { workspace = true, default-features = false, features = ["derive"] }
tinymetrics = { workspace = true, default-features = false, optional = true }
