[package]
name = "eclss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde", "tinymetrics/serde"]
scd40 = ["dep:scd4x"]
default = ["pmsa003i", "scd40"]

[dependencies]
eclss-api = { workspace = true, features = ["fmt"] }
embedded-hal-async = { workspace = true }
embedded-hal = { workspace = true }
maitake-sync = { workspace = true }
tinymetrics = { workspace = true, default-features = false }
scd4x = { workspace = true, optional = true, default-features = false, features = ["embedded-hal-async"] }
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true, default-features = false, features = ["attributes"] }
pmsa003i = { workspace = true, optional = true, features = ["embedded-hal-async"] }
