[package]
name = "eclss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bme680 = ["dep:bosch-bme680"]
serde = ["dep:serde", "tinymetrics/serde"]
scd30 = ["dep:libscd", "libscd/scd30"]
scd40 = ["dep:libscd", "libscd/scd40"]
scd41 = ["dep:libscd", "libscd/scd41"]
sgp30 = ["dep:sgp30"]
sht41 = ["dep:sht4x", "dep:fixed"]
default = ["pmsa003i", "scd41", "ens160", "sgp30", "bme680"]

[dependencies]
bosch-bme680 = { workspace = true, optional = true, features = ["embedded-hal-async"] }
eclss-api = { workspace = true, features = ["fmt", "tinymetrics"] }
ens160 = { workspace = true, optional = true, features = ["async"] }
embedded-hal-async = { workspace = true }
embedded-hal = { workspace = true }
fixed = { workspace = true, optional = true }
libscd = { workspace = true, optional = true, features = ["async"] }
maitake-sync = { workspace = true }
tinymetrics = { workspace = true, default-features = false }
sgp30 = { workspace = true, optional = true, default-features = false, features = ["embedded-hal-async"] }
sht4x = { workspace = true, optional = true, default-features = false, features = ["embedded-hal-async"] }
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true, default-features = false, features = ["attributes"] }
pmsa003i = { workspace = true, optional = true, features = ["embedded-hal-async"] }
